src/objects/QPMS__General_Task__c.object
<CustomObject>
    <description>This object stores general task records.</description>
    <fields>
        <fullName>Document_URL__c</fullName>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QPMS__Action_Plan_s_Effective__c</fullName>
        <label>Action Plan(s) Effective?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Effective</fullName>
                </value>
                <value>
                    <fullName>Not Effective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Add_Effectiveness_verificiation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Effectiveness verificiation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__AdhocTask_Title__c</fullName>
        <description>AdhocTask Title to display tasks</description>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Adhoc_Sequence__c</fullName>
        <description>Adhoc Task sequence numbers</description>
        <label>Adhoc Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <formula>TEXT(if(ISBLANK( QPMS__Task_Reopen_Date__c), IF(ISBLANK( QPMS__Task_Closed_Date__c),TODAY() - DATEVALUE(CreatedDate), QPMS__Task_Closed_Date__c- IF(ISBLANK( QPMS__Open_Date__c ),DATEVALUE( CreatedDate),QPMS__Open_Date__c )),IF(ISBLANK( QPMS__Task_Closed_Date__c),TODAY() - QPMS__Task_Reopen_Date__c, QPMS__Task_Closed_Date__c-QPMS__Task_Reopen_Date__c)))</formula>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
                <value>
                    <fullName>Change DueDate</fullName>
                </value>
                <value>
                    <fullName>Containment Close</fullName>
                </value>
                <value>
                    <fullName>ProductReview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>To store Approval Group</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <label>Approval Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approver Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Final_Result__c</fullName>
        <label>Audit Final Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Lead_Auditor_Name__c</fullName>
        <formula>QPMS__Audit__r.QPMS__Lead_Auditor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Lead Auditor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program_Owner__c</fullName>
        <formula>QPMS__Audit_Program__r.QPMS__Audit_Program_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Program Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Program</label>
        <referenceTo>QPMS__Audit_Program__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program_status__c</fullName>
        <label>Audit Program status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expire</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA_Effectiveness__c</fullName>
        <label>CAPA Effectiveness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Effective</fullName>
                    <default>true</default>
                    <label>Effective</label>
                </value>
                <value>
                    <fullName>Not Effective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__CAPA_ID__c</fullName>
        <formula>QPMS__CAPA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA_Owner_Name__c</fullName>
        <formula>QPMS__CAPA__r.QPMS__CAPA_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Change_Management_OwnerId__c</fullName>
        <formula>QPMS__Change_Management__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Management OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Management_Owner_Name__c</fullName>
        <formula>QPMS__Change_Management__r.QPMS__Owner_Name__c</formula>
        <label>Change Management Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Management</label>
        <referenceTo>QPMS__Change_Management__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Owner_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Owner Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Closure_Comment__c</fullName>
        <label>Closure Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Collaboration_Title__c</fullName>
        <label>Collaboration Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_By_Name__c</fullName>
        <formula>IF( ISBLANK( QPMS__Completed_By__c ) ,&apos;&apos;, QPMS__Completed_By__r.LastName &amp; &quot;, &quot; &amp; QPMS__Completed_By__r.FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_TasksnTvp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Create_New_CAPA__c</fullName>
        <label>Create New CAPA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Create_a_CAPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create a CAPA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_From_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to differntiate tasks with Created From Template</description>
        <label>Created From Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>QPMS__Business_Entity__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Profile_Owner_Name__c</fullName>
        <formula>QPMS__Document_Profile__r.QPMS__Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Profile Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Profile</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Keep Status Current</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
                <value>
                    <fullName>Expire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Document_Status_temp__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Keep Status Current</fullName>
                </value>
                <value>
                    <fullName>Expire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__DueDateApproved_Subject__c</fullName>
        <description>This field is used in the subject of &quot;DueDateApproved&quot; Email Template</description>
        <formula>QPMS__Non_Conformance__c &amp; &quot; &quot; &amp; QPMS__CAPA__c &amp; &quot; &quot; &amp; QPMS__Change_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DueDateApproved Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Escalation_Status__c</fullName>
        <label>Escalation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Flow</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Follow_up_Audit_Date__c</fullName>
        <label>Follow up Audit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_up_Audit_End_Date__c</fullName>
        <description>When closure closed the date value is updated in audit end date</description>
        <label>Follow up Audit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Impact_Assessment__c</fullName>
        <description>This field is used in CR Functional Task</description>
        <label>Impact Assessment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Tasks8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>Security: Used  Sharing setting</description>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <label>Initiating Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Investigation_Summary__c</fullName>
        <label>Investigation Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Investigation_Tool__c</fullName>
        <label>Investigation Tools</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cause &amp; Effect</fullName>
                </value>
                <value>
                    <fullName>Six Sigma</fullName>
                </value>
                <value>
                    <fullName>Fish bone</fullName>
                </value>
                <value>
                    <fullName>5 Whys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Investigation_Tools__c</fullName>
        <label>Investigation Tools</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cause &amp; Effect</fullName>
                </value>
                <value>
                    <fullName>Six Sigma</fullName>
                </value>
                <value>
                    <fullName>Fish bone</fullName>
                </value>
                <value>
                    <fullName>5 Whys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__IsRejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_collaboration_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is collaboration Review</description>
        <label>Is collaboration Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Email alert to manager of the owner</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Tasks0B4Z</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>General Tasks (Manufacturing Site)</relationshipLabel>
        <relationshipName>General_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__My_Picklist_Field__c</fullName>
        <label>My Picklist Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__NC_ID__c</fullName>
        <formula>QPMS__Non_Conformance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Due_Date__c</fullName>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Expiration_Date__c</fullName>
        <label>New Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__NonConformanceName__c</fullName>
        <description>Formula field is created for getting NC owner name on General task object while sending the Email template to the User</description>
        <formula>QPMS__Non_Conformance__r.QPMS__Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonConformanceName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Conformance</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Owner_DueDate__c</fullName>
        <label>Note To Approver Owner/DueDate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Reviewer__c</fullName>
        <label>Note To Reviewer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_of_times_Reviewed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of times Reviewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Objective_Evidence__c</fullName>
        <label>Objective Evidence</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Observation</label>
        <referenceTo>QPMS__Observation__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Open_Date__c</fullName>
        <description>The day the task has beed opened</description>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__OwnerName__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ParentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Owner of general Task</description>
        <label>ParentOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Child_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ParentQueue__c</fullName>
        <label>ParentQueue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Primary_File_Location__c</fullName>
        <label>Primary File Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason_For_Reopen__c</fullName>
        <description>Reason For Reopen</description>
        <label>Reason For Reopen</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason_For_Void__c</fullName>
        <description>Reason For Void</description>
        <label>Reason For Void</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reassign_To__c</fullName>
        <label>Reassign To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Delegator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Recall_Status__c</fullName>
        <label>Recall Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Rejection_Comments__c</fullName>
        <label>Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Require_Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Follow up?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Review_Description__c</fullName>
        <label>Review Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Review_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Review_Required__c</fullName>
        <label>Review Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Risk_Assessment_Required__c</fullName>
        <label>Risk Assessment Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Risk_Description__c</fullName>
        <label>Risk Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Risk_Occurrence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Occurrence</label>
        <referenceTo>QPMS__Risk_Occurrence__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Risk_Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Priority</label>
        <referenceTo>QPMS__Risk_Priority__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Risk_Severity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Severity</label>
        <referenceTo>QPMS__Risk_Severity__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Select__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence_Position__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Sequence in which task should be performed.</description>
        <inlineHelpText>Sequence in which task should be performed. For example, if value is &apos;3&apos; then tasks with sequence numbers &apos;1&apos; and &apos;2&apos; should be performed first.</inlineHelpText>
        <label>Sequence Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Sign_Off_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sign Off By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>